@@ -41,7 +41,7 @@ requires:
   MARC::Convert::Wikidata::Object::Kramerius: 0
   MARC::Convert::Wikidata::Object::People: 0
   MARC::Convert::Wikidata::Object::Publisher: 0
-  MARC::Convert::Wikidata::Object::Series: 0.09
+  MARC::Convert::Wikidata::Object::Series: 0.15
   MARC::Field008: 0.03
   MARC::Leader: 0.05
   Mo::utils: 0.08
